# pelican

./: com.github.brainstormtrooper.cphotos (copy).json  com.github.brainstormtrooper.cphotos.json  com.github.brainstormtrooper.cphotos.json~  meson.build
data/: com.github.brainstormtrooper.cphotos.appdata.xml.in  com.github.brainstormtrooper.cphotos.desktop.in  com.github.brainstormtrooper.cphotos.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: bus.py  cdata.py  cphotos.gresource.xml  cphotos.in  dates.py  dates.ui  dbase.py  local.py  locals.py  main.py  mapview.py  mapview.ui  meson.build  page.ui  pager.py  previews.py  remote.py  remotes.py  window.orig.ui  window.py  window.ui
src/providers/: meson.build  nextcloud.py
src/remotes/: google.py  meson.build  nextcloud.py
